objects/PR_Item__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>QuantityBasedApprovalRouting will use to check which level it will route for approval</description>
    <fields>
        <fullName>Maximum_Value__c</fullName>
        <label>Maximum Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Value__c</fullName>
        <label>Minimum Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routing_Parameter__c</fullName>
        <label>Routing Parameter</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>QuantityBasedApprovalRouting</label>
</CustomObject>